...
                />
            <EditText
                android:id="@+id/addSavingsAccountName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                />
            <EditText
                android:id="@+id/addSavingsCurrentValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <!-- Quicklook Checkbox -->
            <CheckBox android:id="@+id/addSavingsQuicklookCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                />

            <CheckBox android:id="@+id/addSavingsSetGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                    />
                <EditText
                    android:id="@+id/addSavingsGoalAmount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
...
                    />
                <TextView
                    android:id="@+id/addSavingsGoalDate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
...
                    />
                <Spinner
                    android:id="@+id/addSavingsContributionFrequency"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
...
                    />
                <EditText
                    android:id="@+id/addSavingsContributionAmount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
...
                    />
                <Spinner
                    android:id="@+id/addSavingsSourceAccount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
...

                <TextView
                    android:id="@+id/addSavingsNextDate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
...

                    <TextView
                        android:id="@+id/addSavingsEndDate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
...
                        />

                    <CheckBox android:id="@+id/addSavingsOngoingCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
...

            <android.widget.Button
                android:id="@+id/addSavingsCleanButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <android.widget.Button
                android:id="@+id/addSavingsSubmitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
            <!-- Delete Button for when the user is editing an existing account -->
            <android.widget.Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
