...
                    android:textSize="@dimen/smaller_text_size"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    />
                <Spinner
                    android:id="@+id/addCreditCardPaymentFrequencySpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/smaller_text_size"
                    android:gravity="center_vertical"
                    android:entries="@array/add_creditcard_payment_frequency_array"
                    android:padding="@dimen/add_payment_small_padding"
...
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    >
                    <EditText
                        android:id="@+id/addCreditCardPaymentAmountHint"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/add_creditcard_payment_amount_hint"
                        android:textSize="@dimen/smaller_text_size"
                        android:inputType="numberDecimal|numberSigned"
                        android:imeOptions="actionDone"
                        android:gravity="center_vertical"
                        android:enabled="true"
                        android:layout_weight="4"
                        />

                    <CheckBox android:id="@+id/addCreditCardPaymentAmountPayoff"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:checked="false"
                        android:onClick="payoffCheckboxChecked"
                        android:layout_weight="1"
                        />
...
                    android:textSize="@dimen/smaller_text_size"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    />
                <Spinner
                    android:id="@+id/addCreditCardPaymentSourceSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/smaller_text_size"
                    android:gravity="center_vertical"
                    android:padding="@dimen/add_payment_small_padding"
                    android:layout_weight="1"
...
                    android:textSize="@dimen/smaller_text_size"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/addCreditCardPaymentNextInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/add_creditcard_payment_date_hint"
                    android:textSize="@dimen/smaller_text_size"
                    android:gravity="center_vertical"
                    android:clickable="true"
...
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="@dimen/add_payment_small_padding"
                    android:weightSum="5"
                    >
                    <TextView
                        android:id="@+id/addCreditCardPaymentInputEnd"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/add_creditcard_payment_date_hint"
                        android:textSize="@dimen/smaller_text_size"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        android:onClick="endDateClicked"
                        android:layout_weight="4"
                        />
                    <CheckBox android:id="@+id/addCreditCardPaymentOngoingCheckbox"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:checked="false"
                        android:onClick="ongoingCheckboxChecked"
                        android:layout_weight="1"
                        />
...
                    android:textSize="@dimen/standard_text_size"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/add_payment_padding"
                    android:paddingBottom="@dimen/add_payment_small_padding"
                    />

                <CheckBox android:id="@+id/addCreditCardPaymentSetGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_creditcard_payment_set_goal_prompt"
                    android:textSize="@dimen/smaller_text_size"
                    android:textStyle="bold"
                    android:onClick="setGoalChecked"/>
...
                        android:textSize="@dimen/smaller_text_size"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:id="@+id/addCreditCardPaymentInputGoal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/add_creditcard_payment_date_hint"
                        android:textSize="@dimen/smaller_text_size"
                        android:gravity="center_vertical"
                        android:onClick="goalDateClicked"
...
            android:orientation="horizontal"
            android:padding="@dimen/add_payment_small_padding"
            android:weightSum="3">

            <!-- Submit button -->
            <android.widget.Button
                android:id="@+id/addCreditCardPaymentSubmitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_creditcard_payment_submit_button"
                android:textSize="@dimen/standard_text_size"
                android:onClick="addCreditCardPaymentSubmitClick"
...
