...
                android:layout_height="wrap_content"
                android:text="@string/add_loss_description_prompt"
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/addLossDescriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_loss_description_hint"
                android:textSize="@dimen/standard_text_size"
                android:inputType="text"
                android:imeOptions="actionDone"
...
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_weight="1"
                />
            <Spinner
                android:id="@+id/addLossFrequencySpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center_vertical"
                android:entries="@array/add_loss_frequency_array"
                android:layout_weight="1"
...
                android:layout_height="wrap_content"
                android:text="@string/add_loss_amount_prompt"
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/addLossAmountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_loss_amount_hint"
                android:textSize="@dimen/standard_text_size"
                android:inputType="numberDecimal|numberSigned"
                android:imeOptions="actionDone"
...
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/addLossNextInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/add_loss_date_hint"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center_vertical"
                android:clickable="true"
...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5"
                >
                <TextView
                    android:id="@+id/addLossEndInput"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:hint="@string/add_loss_date_hint"
                    android:textSize="@dimen/standard_text_size"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="endDateClicked"
                    android:layout_weight="4"
                    />
                <CheckBox android:id="@+id/addLossOngoingCheckbox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:onClick="ongoingCheckboxChecked"
                    android:layout_weight="1"
                    />
...
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_weight="1"
                />
            <Spinner
                android:id="@+id/addLossSourceSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center_vertical"
                android:layout_weight="1"
                />
...
            android:orientation="horizontal"
            android:weightSum="3"
            android:padding="@dimen/padding_generic">

            <!-- Submit Button to Add Loss -->
            <android.widget.Button
                android:id="@+id/submitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_loss_submit"
                android:textSize="@dimen/standard_text_size"
                android:onClick="submitClick"
...
