...
                android:layout_height="wrap_content"
                android:text="@string/add_gain_description_prompt"
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/addGainDescriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_gain_description_hint"
                android:textSize="@dimen/standard_text_size"
                android:inputType="text"
                android:imeOptions="actionDone"
...
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_weight="1"
                />
            <Spinner
                android:id="@+id/addGainFrequencySpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center_vertical"
                android:entries="@array/add_gain_frequency_array"
                android:layout_weight="1"
...
                android:layout_height="wrap_content"
                android:text="@string/add_gain_amount_prompt"
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/addGainAmountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_gain_amount_hint"
                android:textSize="@dimen/standard_text_size"
                android:inputType="numberDecimal|numberSigned"
                android:imeOptions="actionDone"
...
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/addGainNextInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/add_gain_date_hint"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center_vertical"
                android:clickable="true"
...
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5"
                android:padding="@dimen/padding_generic"
                >
                <TextView
                    android:id="@+id/addGainEndInput"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:hint="@string/add_gain_date_hint"
                    android:textSize="@dimen/standard_text_size"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="endDateClicked"
                    android:layout_weight="4"
                    />
                <CheckBox android:id="@+id/addGainOngoingCheckbox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:onClick="ongoingCheckboxChecked"
                    android:layout_weight="1"
                    />
...
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_weight="1"
                />
            <Spinner
                android:id="@+id/addGainDestinationSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center_vertical"
                android:layout_weight="1"
                />
...
